tests/throw/throw.exp
Error ------------------------------------------------------------ test.js:13:12

Error: test.js:13
 13:     return a*1; // a is not null
                ^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
    9: function g(a: ?string) {
                      ^^^^^^ [1]: string


Found 1 error
